Style sheet structure

--- a/src/index.pug
+++ b/src/index.pug
@@ -62,7 +62,7 @@ html(lang='en')
                   span.emoji 💬
                 input(type='email' name='email' placeholder='Your Email Address' maxlength='100' required)
                 textarea(name='message' placeholder='Your Question' maxlength='255' rows='3' required)
-                .flex_row
+                .send_row
                   input.btn(type='submit' name='send' value='Send')
                   .status#msg_status
         .content
