--- a/src/style.scss
+++ b/src/style.scss
@@ -47,10 +47,9 @@ html, body {
   font-family: $fontFam;
   color: $fontColor;
   background-color: $backColor;
+  text-size-adjust: none;
   user-select: none;
-  -webkit-user-select: none;
   -webkit-touch-callout: none;
-  -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 h1, h2, h3, h4 {
@@ -135,7 +134,6 @@ img {
 
 // header section
 header {
-  position: -webkit-sticky;
   position: sticky;
   z-index: 25;
   top: 0;
@@ -331,7 +329,7 @@ form[name='ask'] {
     font-family: $fontFam;
     box-shadow: none;
     outline: none;
-    -webkit-appearance: none;
+    appearance: none;
   }
   input[type='email'], textarea {
     width: 100%;
